--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@xyflow/react": "^12.8.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
     "path": "^0.12.7",
     "radix-ui": "^1.4.3",
@@ -39,6 +40,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
